--- a/html/resource/dwz.frag.html
+++ b/html/resource/dwz.frag.html
@@ -74,10 +74,10 @@
 <div id="dialogBackground" class="dialogBackground"></div>
 
 <div class='background' id='aj_background'></div>
-<div class='progressBar' id='aj_progressBar'> <i class="icon-spinner icon-spin"></i>处理中，请稍后...</div>
+<div class='progressBar' id='aj_progressBar' style='width:300px'> <i class="icon-spinner icon-spin icon-2x"></i>处理中，请稍后...</div>
 <!-- rock add -->
 <div id='my_background' class='background'></div>
-<div id='my_progressBar' class='progressBar'><i class="icon-spinner icon-spin"></i>处理中, 请稍后...</div>
+<div id='my_progressBar' class='progressBar' style='width:300px'><i class="icon-spinner icon-spin icon-2x"></i>处理中, 请稍后...</div>
 </textarea>
 <!-- dwz.pagination -->
 <textarea id="pagination"><ul>
