--- a/html/dmt_login.html
+++ b/html/dmt_login.html
@@ -56,9 +56,9 @@
 						<img src='<?cs var:config.docpath?>/images/login_show.png' style='float:left;padding-bottom:5px' width='64px' height='40px' />
 					</a>
 					<?cs if:config.isdaemon == 1 ?>
-                    <h2>字符云监控系统 - 演示版</h2>
+                    <h3 style='line-height:33px;font-size:20px;text-align:center'>字符云监控系统开源版 - 演示</h3>
 					<?cs else ?>
-                    <h2>字符云监控系统</h2>
+                    <h3 style='line-height:33px;font-size:20px;text-align:center'>字符云监控系统开源版</h3>
 					<?cs /if ?>
                 </header>
                 <div class="kit-login-main">
